# docs/swagger.json
@@ -24,7 +24,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "api"
+                    "photo"
                 ],
                 "summary": "get photo",
                 "operationId": "get-photo",
@@ -63,6 +63,62 @@
                     }
                 }
             },
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Change photo by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "photo"
+                ],
+                "summary": "change",
+                "operationId": "change",
+                "parameters": [
+                    {
+                        "description": "Base64 encoded photo and photo_id",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.ChangePhoto"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Photo"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -77,7 +133,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "api"
+                    "photo"
                 ],
                 "summary": "upload",
                 "operationId": "upload",
@@ -96,11 +152,73 @@
                     "200": {
                         "description": "OK",
                         "schema": {
+                            "$ref": "#/definitions/response.Photo"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Delete photo by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "photo"
+                ],
+                "summary": "delete",
+                "operationId": "deletePhoto",
+                "parameters": [
+                    {
+                        "description": "Id photo to delete",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.DeletePhoto"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
                             "$ref": "#/definitions/response.Message"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/response.Error"
                         }
@@ -129,7 +247,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "api"
+                    "photo"
                 ],
                 "summary": "get random photo",
                 "operationId": "get-random-photo",
@@ -176,7 +294,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "api"
+                    "rating"
                 ],
                 "summary": "set-rating",
                 "operationId": "set-rating",
@@ -397,6 +515,32 @@
         }
     },
     "definitions": {
+        "request.ChangePhoto": {
+            "type": "object",
+            "required": [
+                "base64",
+                "photo_id"
+            ],
+            "properties": {
+                "base64": {
+                    "type": "string"
+                },
+                "photo_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "request.DeletePhoto": {
+            "type": "object",
+            "required": [
+                "photo_id"
+            ],
+            "properties": {
+                "photo_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "request.Refresh": {
             "type": "object",
             "required": [
@@ -460,10 +604,10 @@
         "request.Upload": {
             "type": "object",
             "required": [
-                "photo"
+                "base64"
             ],
             "properties": {
-                "photo": {
+                "base64": {
                     "type": "string"
                 }
             }
@@ -501,6 +645,17 @@
             ],
             "properties": {
                 "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.Photo": {
+            "type": "object",
+            "required": [
+                "photo_id"
+            ],
+            "properties": {
+                "photo_id": {
                     "type": "string"
                 }
             }
