# internal/delivery/http/request/photo.go
@@ -1,9 +1,18 @@
 package request
 
 type Upload struct {
-	Photo string `json:"photo" binding:"required,base64"`
+	Base64 string `json:"base64" binding:"required,base64"`
 }
 
 type Photo struct {
 	Id string `uri:"id" binding:"required"`
+}
+
+type ChangePhoto struct {
+	PhotoId string `json:"photo_id" binding:"required"`
+	Base64  string `json:"base64" binding:"required,base64"`
+}
+
+type DeletePhoto struct {
+	PhotoId int `json:"photo_id" binding:"required"`
 }
